--- a/metadata.yaml
+++ b/metadata.yaml
@@ -40,5 +40,6 @@ subjects:
 - !lcsh 'Animals -- Juvenile fiction'
 - !lcsh 'Bears -- Juvenile fiction'
 - !lcc 'PZ'
+- GITenberg
 title: The Adventures of Buster Bear
 url: http://www.gutenberg.org/ebooks/22816
